# llm-research-agent

./: .env.example  .gitignore  DEMO_ENGINE_RUNBOOK.md  README.md  langgraph.json  pyproject.toml
.github/workflows/: deploy.yml
evals/: ab_test.py  golden_dataset.py  golden_snapshot.json  online_memory_eval.py  run_eval.py
llm_research_agent/: agent.py
llm_research_agent/utils/: budget.py  tools.py
tests/: test_recursion_floor.py
