[project]
name = "llm-research-agent"
version = "0.1.0"
description = "A DeepAgents research analyst for the LLM landscape, with Context Hub skills and long-term scorecard memory."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.6.7",
    "langchain>=1.3.2",
    "langchain-mcp-adapters>=0.2.2",
    "langgraph-cli[inmem]>=0.4.27",
    "langsmith[sandbox]>=0.8.0",
    "tavily>=1.1.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

# Only the agent package is installable. Without this, setuptools' flat-layout
# auto-discovery sees both `llm_research_agent` and `evals` as top-level packages
# and aborts ("Multiple top-level packages discovered"), failing the deploy
# build. `namespaces = true` keeps discovery working without `__init__.py` files.
[tool.setuptools.packages.find]
include = ["llm_research_agent*"]
namespaces = true
